<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_grid_edit" >
	
	<ImageView
	    android:contentDescription="@string/backCD"
		android:layout_marginTop="4dp"
		android:layout_marginLeft="4dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_width="38dp" 
		android:layout_height="38dp"
		android:clickable="true"
		android:onClick="back"
		android:src="@drawable/arrowleft" >
	</ImageView>
	    
	<TextView
	    android:layout_marginTop="4dp"
		android:layout_width="fill_parent"
		android:layout_height="38dp"
		android:layout_alignParentTop="true"
		android:gravity="center"
		android:text="Library"
		android:textSize="22sp"
		android:textStyle="bold|italic">
	</TextView>

	<ImageView
	    android:contentDescription="@string/homeCD"
		android:layout_marginTop="4dp"
		android:layout_marginLeft="4dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:layout_width="34dp" 
		android:layout_height="34dp"
		android:clickable="true"
		android:visibility="gone"
		android:onClick="homeScreen"
		android:src="@drawable/home" >
	</ImageView>
    
	<RelativeLayout 
	    android:layout_marginTop="44dp"
	    android:layout_alignParentTop="true"
	    android:layout_width="fill_parent"
	    android:layout_height="36dp"
	    android:orientation="horizontal"
	    android:gravity="center_vertical" >
	
	    <EditText 
	    	android:id="@+id/searchField" 
	    	android:layout_width="fill_parent" 
	    	android:gravity="center_vertical"
	    	android:layout_height="wrap_content"
	    	android:textSize="14sp" 
	    	android:inputType="textEmailAddress" 
	    	android:hint="Search..."
	    	android:textColorHint="#2B2B2B"
	    	android:layout_marginLeft="10dp"
		   	android:layout_marginRight="140dp" >
		</EditText>
		
		<Spinner
	        android:id="@+id/type"
            android:layout_alignParentRight="true"
	        android:layout_width="100dp"
	        android:layout_marginRight="40dp"
	        android:textSize="13sp"
	        android:layout_height="wrap_content"
	        android:entries="@array/library_search_options"
	        android:prompt="@string/search_type_prompt" />
	    
    	<ImageView
    	   android:contentDescription="@string/searchCD"
	       android:id="@+id/searchButton"
		   android:layout_alignParentRight="true"
	       android:layout_width="30dp"
	       android:layout_height="30dp"
	       android:layout_marginRight="10dp"
	       android:clickable="true"
	       android:onClick="librarySearch"
	       android:src="@drawable/search_button" >
	   </ImageView>
 	</RelativeLayout> 
    <ScrollView
	  	android:layout_width="fill_parent"
	   	android:layout_gravity="center_vertical"
	   	android:layout_height="match_parent"
	   	android:layout_marginTop="80dp"
	   	android:gravity="center_vertical" >
	   	
	        <LinearLayout
				android:id="@+id/libraryContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
   			</LinearLayout>
    </ScrollView>
</RelativeLayout>